@@ -10,11 +10,13 @@ package org.elasticsearch.cluster.action.shard;
 
 import org.apache.lucene.index.CorruptIndexException;
 import org.elasticsearch.Version;
+import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ClusterStateTaskExecutor;
 import org.elasticsearch.cluster.ESAllocationTestCase;
 import org.elasticsearch.cluster.action.shard.ShardStateAction.FailedShardEntry;
+import org.elasticsearch.cluster.action.shard.ShardStateAction.FailedShardUpdateTask;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
@@ -81,52 +83,51 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
             .metadata(metadata)
             .routingTable(routingTable)
             .build();
-        executor = new ShardStateAction.ShardFailedClusterStateTaskExecutor(allocationService, null, logger);
+        executor = new ShardStateAction.ShardFailedClusterStateTaskExecutor(allocationService, null);
     }
 
     public void testEmptyTaskListProducesSameClusterState() throws Exception {
-        List<ShardStateAction.FailedShardEntry> tasks = Collections.emptyList();
-        ClusterStateTaskExecutor.ClusterTasksResult<ShardStateAction.FailedShardEntry> result = executor.execute(clusterState, tasks);
+        List<FailedShardUpdateTask> tasks = Collections.emptyList();
+        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardUpdateTask> result = executor.execute(clusterState, tasks);
         assertTasksSuccessful(tasks, result, clusterState, false);
     }
 
     public void testDuplicateFailuresAreOkay() throws Exception {
         String reason = "test duplicate failures are okay";
         ClusterState currentState = createClusterStateWithStartedShards(reason);
-        List<FailedShardEntry> tasks = createExistingShards(currentState, reason);
-        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardEntry> result = executor.execute(currentState, tasks);
+        List<FailedShardUpdateTask> tasks = createExistingShards(currentState, reason);
+        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardUpdateTask> result = executor.execute(currentState, tasks);
         assertTasksSuccessful(tasks, result, clusterState, true);
     }
 
     public void testNonExistentShardsAreMarkedAsSuccessful() throws Exception {
         String reason = "test non existent shards are marked as successful";
         ClusterState currentState = createClusterStateWithStartedShards(reason);
-        List<FailedShardEntry> tasks = createNonExistentShards(currentState, reason);
-        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardEntry> result = executor.execute(clusterState, tasks);
+        List<FailedShardUpdateTask> tasks = createNonExistentShards(currentState, reason);
+        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardUpdateTask> result = executor.execute(clusterState, tasks);
         assertTasksSuccessful(tasks, result, clusterState, false);
     }
 
     public void testTriviallySuccessfulTasksBatchedWithFailingTasks() throws Exception {
         String reason = "test trivially successful tasks batched with failing tasks";
         ClusterState currentState = createClusterStateWithStartedShards(reason);
-        List<FailedShardEntry> failingTasks = createExistingShards(currentState, reason);
-        List<FailedShardEntry> nonExistentTasks = createNonExistentShards(currentState, reason);
+        List<FailedShardUpdateTask> failingTasks = createExistingShards(currentState, reason);
+        List<FailedShardUpdateTask> nonExistentTasks = createNonExistentShards(currentState, reason);
         ShardStateAction.ShardFailedClusterStateTaskExecutor failingExecutor = new ShardStateAction.ShardFailedClusterStateTaskExecutor(
             allocationService,
-            null,
-            logger
+            null
         ) {
             @Override
             ClusterState applyFailedShards(ClusterState currentState, List<FailedShard> failedShards, List<StaleShard> staleShards) {
                 throw new RuntimeException("simulated applyFailedShards failure");
             }
         };
-        List<FailedShardEntry> tasks = new ArrayList<>();
+        List<FailedShardUpdateTask> tasks = new ArrayList<>();
         tasks.addAll(failingTasks);
         tasks.addAll(nonExistentTasks);
-        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardEntry> result = failingExecutor.execute(currentState, tasks);
-        List<Tuple<FailedShardEntry, ClusterStateTaskExecutor.TaskResult>> taskResultList = new ArrayList<>();
-        for (FailedShardEntry failingTask : failingTasks) {
+        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardUpdateTask> result = failingExecutor.execute(currentState, tasks);
+        List<Tuple<FailedShardUpdateTask, ClusterStateTaskExecutor.TaskResult>> taskResultList = new ArrayList<>();
+        for (FailedShardUpdateTask failingTask : failingTasks) {
             taskResultList.add(
                 Tuple.tuple(
                     failingTask,
@@ -134,7 +135,7 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
                 )
             );
         }
-        for (FailedShardEntry nonExistentTask : nonExistentTasks) {
+        for (FailedShardUpdateTask nonExistentTask : nonExistentTasks) {
             taskResultList.add(Tuple.tuple(nonExistentTask, ClusterStateTaskExecutor.TaskResult.success()));
         }
         assertTaskResults(taskResultList, result, currentState, false);
@@ -143,39 +144,45 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
     public void testIllegalShardFailureRequests() throws Exception {
         String reason = "test illegal shard failure requests";
         ClusterState currentState = createClusterStateWithStartedShards(reason);
-        List<ShardStateAction.FailedShardEntry> failingTasks = createExistingShards(currentState, reason);
-        List<ShardStateAction.FailedShardEntry> tasks = new ArrayList<>();
-        for (ShardStateAction.FailedShardEntry failingTask : failingTasks) {
-            long primaryTerm = currentState.metadata().index(failingTask.shardId.getIndex()).primaryTerm(failingTask.shardId.id());
+        List<FailedShardUpdateTask> failingTasks = createExistingShards(currentState, reason);
+        List<FailedShardUpdateTask> tasks = new ArrayList<>();
+        for (FailedShardUpdateTask failingTask : failingTasks) {
+            FailedShardEntry entry = failingTask.getEntry();
+            long primaryTerm = currentState.metadata().index(entry.getShardId().getIndex()).primaryTerm(entry.getShardId().id());
             tasks.add(
-                new FailedShardEntry(
-                    failingTask.shardId,
-                    failingTask.allocationId,
-                    randomIntBetween(1, (int) primaryTerm - 1),
-                    failingTask.message,
-                    failingTask.failure,
-                    randomBoolean()
+                new FailedShardUpdateTask(
+                    new FailedShardEntry(
+                        entry.getShardId(),
+                        entry.getAllocationId(),
+                        randomIntBetween(1, (int) primaryTerm - 1),
+                        entry.message,
+                        entry.failure,
+                        randomBoolean()
+                    ),
+                    createTestListener()
                 )
             );
         }
-        List<Tuple<FailedShardEntry, ClusterStateTaskExecutor.TaskResult>> taskResultList = tasks.stream()
+        List<Tuple<FailedShardUpdateTask, ClusterStateTaskExecutor.TaskResult>> taskResultList = tasks.stream()
             .map(
                 task -> Tuple.tuple(
                     task,
                     ClusterStateTaskExecutor.TaskResult.failure(
                         new ShardStateAction.NoLongerPrimaryShardException(
-                            task.shardId,
+                            task.getEntry().getShardId(),
                             "primary term ["
-                                + task.primaryTerm
+                                + task.getEntry().primaryTerm
                                 + "] did not match current primary term ["
-                                + currentState.metadata().index(task.shardId.getIndex()).primaryTerm(task.shardId.id())
+                                + currentState.metadata()
+                                    .index(task.getEntry().getShardId().getIndex())
+                                    .primaryTerm(task.getEntry().getShardId().id())
                                 + "]"
                         )
                     )
                 )
             )
             .collect(Collectors.toList());
-        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardEntry> result = executor.execute(currentState, tasks);
+        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardUpdateTask> result = executor.execute(currentState, tasks);
         assertTaskResults(taskResultList, result, currentState, false);
     }
 
@@ -187,29 +194,21 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
         long primaryTerm = clusterState.metadata().index(INDEX).primaryTerm(0);
         final Set<String> oldInSync = clusterState.metadata().index(INDEX).inSyncAllocationIds(0);
         {
-            ShardStateAction.FailedShardEntry failShardOnly = new ShardStateAction.FailedShardEntry(
-                shardRoutingTable.shardId(),
-                randomFrom(oldInSync),
-                primaryTerm,
-                "dummy",
-                null,
-                false
+            FailedShardUpdateTask failShardOnly = new FailedShardUpdateTask(
+                new FailedShardEntry(shardRoutingTable.shardId(), randomFrom(oldInSync), primaryTerm, "dummy", null, false),
+                createTestListener()
             );
-            ClusterState appliedState = executor.execute(clusterState, Collections.singletonList(failShardOnly)).resultingState;
+            ClusterState appliedState = executor.execute(clusterState, List.of(failShardOnly)).resultingState;
             Set<String> newInSync = appliedState.metadata().index(INDEX).inSyncAllocationIds(0);
             assertThat(newInSync, equalTo(oldInSync));
         }
         {
             final String failedAllocationId = randomFrom(oldInSync);
-            ShardStateAction.FailedShardEntry failAndMarkAsStale = new ShardStateAction.FailedShardEntry(
-                shardRoutingTable.shardId(),
-                failedAllocationId,
-                primaryTerm,
-                "dummy",
-                null,
-                true
+            FailedShardUpdateTask failAndMarkAsStale = new FailedShardUpdateTask(
+                new FailedShardEntry(shardRoutingTable.shardId(), failedAllocationId, primaryTerm, "dummy", null, true),
+                createTestListener()
             );
-            ClusterState appliedState = executor.execute(clusterState, Collections.singletonList(failAndMarkAsStale)).resultingState;
+            ClusterState appliedState = executor.execute(clusterState, List.of(failAndMarkAsStale)).resultingState;
             Set<String> newInSync = appliedState.metadata().index(INDEX).inSyncAllocationIds(0);
             assertThat(Sets.difference(oldInSync, newInSync), contains(failedAllocationId));
         }
@@ -225,7 +224,7 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
         return ESAllocationTestCase.startInitializingShardsAndReroute(allocationService, stateAfterReroute);
     }
 
-    private List<ShardStateAction.FailedShardEntry> createExistingShards(ClusterState currentState, String reason) {
+    private List<FailedShardUpdateTask> createExistingShards(ClusterState currentState, String reason) {
         List<ShardRouting> shards = new ArrayList<>();
         GroupShardsIterator<ShardIterator> shardGroups = currentState.routingTable().allAssignedShardsGrouped(new String[] { INDEX }, true);
         for (ShardIterator shardIt : shardGroups) {
@@ -243,7 +242,7 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
         return toTasks(currentState, shardsToFail, indexUUID, reason);
     }
 
-    private List<ShardStateAction.FailedShardEntry> createNonExistentShards(ClusterState currentState, String reason) {
+    private List<FailedShardUpdateTask> createNonExistentShards(ClusterState currentState, String reason) {
         // add shards from a non-existent index
         String nonExistentIndexUUID = "non-existent";
         Index index = new Index("non-existent", nonExistentIndexUUID);
@@ -254,31 +253,31 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
             nonExistentShards.add(nonExistentShardRouting(index, nodeIds, false));
         }
 
-        List<ShardStateAction.FailedShardEntry> existingShards = createExistingShards(currentState, reason);
-        List<ShardStateAction.FailedShardEntry> shardsWithMismatchedAllocationIds = new ArrayList<>();
-        for (ShardStateAction.FailedShardEntry existingShard : existingShards) {
+        List<FailedShardUpdateTask> existingShards = createExistingShards(currentState, reason);
+        List<FailedShardUpdateTask> shardsWithMismatchedAllocationIds = new ArrayList<>();
+        for (FailedShardUpdateTask existingShard : existingShards) {
+            FailedShardEntry entry = existingShard.getEntry();
             shardsWithMismatchedAllocationIds.add(
-                new ShardStateAction.FailedShardEntry(
-                    existingShard.shardId,
-                    UUIDs.randomBase64UUID(),
-                    0L,
-                    existingShard.message,
-                    existingShard.failure,
-                    randomBoolean()
+                new FailedShardUpdateTask(
+                    new FailedShardEntry(entry.getShardId(), UUIDs.randomBase64UUID(), 0L, entry.message, entry.failure, randomBoolean()),
+                    createTestListener()
                 )
             );
         }
 
-        List<ShardStateAction.FailedShardEntry> tasks = new ArrayList<>();
+        List<FailedShardUpdateTask> tasks = new ArrayList<>();
         nonExistentShards.forEach(
             shard -> tasks.add(
-                new ShardStateAction.FailedShardEntry(
-                    shard.shardId(),
-                    shard.allocationId().getId(),
-                    0L,
-                    reason,
-                    new CorruptIndexException("simulated", nonExistentIndexUUID),
-                    randomBoolean()
+                new FailedShardUpdateTask(
+                    new FailedShardEntry(
+                        shard.shardId(),
+                        shard.allocationId().getId(),
+                        0L,
+                        reason,
+                        new CorruptIndexException("simulated", nonExistentIndexUUID),
+                        randomBoolean()
+                    ),
+                    createTestListener()
                 )
             )
         );
@@ -298,27 +297,27 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
     }
 
     private static void assertTasksSuccessful(
-        List<ShardStateAction.FailedShardEntry> tasks,
-        ClusterStateTaskExecutor.ClusterTasksResult<ShardStateAction.FailedShardEntry> result,
+        List<FailedShardUpdateTask> tasks,
+        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardUpdateTask> result,
         ClusterState clusterState,
         boolean clusterStateChanged
     ) {
-        List<Tuple<FailedShardEntry, ClusterStateTaskExecutor.TaskResult>> taskResultList = tasks.stream()
+        List<Tuple<FailedShardUpdateTask, ClusterStateTaskExecutor.TaskResult>> taskResultList = tasks.stream()
             .map(t -> Tuple.tuple(t, ClusterStateTaskExecutor.TaskResult.success()))
             .collect(Collectors.toList());
         assertTaskResults(taskResultList, result, clusterState, clusterStateChanged);
     }
 
     private static void assertTaskResults(
-        List<Tuple<ShardStateAction.FailedShardEntry, ClusterStateTaskExecutor.TaskResult>> taskResultList,
-        ClusterStateTaskExecutor.ClusterTasksResult<ShardStateAction.FailedShardEntry> result,
+        List<Tuple<FailedShardUpdateTask, ClusterStateTaskExecutor.TaskResult>> taskResultList,
+        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardUpdateTask> result,
         ClusterState clusterState,
         boolean clusterStateChanged
     ) {
         // there should be as many task results as tasks
         assertEquals(taskResultList.size(), result.executionResults.size());
 
-        for (Tuple<FailedShardEntry, ClusterStateTaskExecutor.TaskResult> entry : taskResultList) {
+        for (Tuple<FailedShardUpdateTask, ClusterStateTaskExecutor.TaskResult> entry : taskResultList) {
             // every task should have a corresponding task result
             assertTrue(result.executionResults.containsKey(entry.v1()));
 
@@ -327,15 +326,15 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
         }
 
         List<ShardRouting> shards = clusterState.getRoutingTable().allShards();
-        for (Tuple<FailedShardEntry, ClusterStateTaskExecutor.TaskResult> entry : taskResultList) {
+        for (Tuple<FailedShardUpdateTask, ClusterStateTaskExecutor.TaskResult> entry : taskResultList) {
             if (entry.v2().isSuccess()) {
                 // the shard was successfully failed and so should not be in the routing table
                 for (ShardRouting shard : shards) {
                     if (shard.assignedToNode()) {
                         assertFalse(
                             "entry key " + entry.v1() + ", shard routing " + shard,
-                            entry.v1().getShardId().equals(shard.shardId())
-                                && entry.v1().getAllocationId().equals(shard.allocationId().getId())
+                            entry.v1().getEntry().getShardId().equals(shard.shardId())
+                                && entry.v1().getEntry().getAllocationId().equals(shard.allocationId().getId())
                         );
                     }
                 }
@@ -354,7 +353,7 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
         }
     }
 
-    private static List<ShardStateAction.FailedShardEntry> toTasks(
+    private static List<FailedShardUpdateTask> toTasks(
         ClusterState currentState,
         List<ShardRouting> shards,
         String indexUUID,
@@ -362,15 +361,22 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
     ) {
         return shards.stream()
             .map(
-                shard -> new ShardStateAction.FailedShardEntry(
-                    shard.shardId(),
-                    shard.allocationId().getId(),
-                    randomBoolean() ? 0L : currentState.metadata().getIndexSafe(shard.index()).primaryTerm(shard.id()),
-                    message,
-                    new CorruptIndexException("simulated", indexUUID),
-                    randomBoolean()
+                shard -> new FailedShardUpdateTask(
+                    new FailedShardEntry(
+                        shard.shardId(),
+                        shard.allocationId().getId(),
+                        randomBoolean() ? 0L : currentState.metadata().getIndexSafe(shard.index()).primaryTerm(shard.id()),
+                        message,
+                        new CorruptIndexException("simulated", indexUUID),
+                        randomBoolean()
+                    ),
+                    createTestListener()
                 )
             )
             .collect(Collectors.toList());
+    }
+
+    private static <T> ActionListener<T> createTestListener() {
+        return ActionListener.wrap(() -> { throw new AssertionError("task should not complete"); });
     }
 }
